# danny-toolkit

./: .env.example  .gitignore  AGENT_REFERENCE.md  ARCHITECTURE.md  BRANCH_STRATEGY.md  CHANGELOG.md  CHANGELOG_PHASE29.md  CHANGELOG_PHASE30.md  CLAUDE.md  COGNITIVE_TIERS.md  DEVELOPER_GUIDE.md  FORENSIC_REPORT_V5.md  HARDENING_CHECKLIST.md  LAUNCHER_GUIDE.md  LICENSE  MASTER_INDEX.md  MEMEX_INTERNALS.md  OMEGA_PROTOCOL.py  PIXEL_EYE_INTERNALS.md  RAG_PIPELINE.md  README.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_V5.1.0.md  SYSTEM_MAP.md  Sovereign Dashboard.bat  UPGRADE_WORKFLOW.md  VISION_PIPELINE.md  add_frontmatter.py  auto_refactor_guard.py  brain_cli.py  bulk_assimilator.py  cli.py  config.py  consolidate_omega.py  cosmic_console.py  create_desktop_icon.py  daemon_heartbeat.py  danny-toolkit-overview.txt  evolutionary_audit.py  external_intelligence.py  (+92 more)
.github/workflows/: ci.yml
Omega_Sovereign_Core/: command_deck.py  launch_deck.py  requirements_deck.txt  test_sections.py
Omega_Sovereign_Core/core/: __init__.py  arbitrator.py  bridge.py  engine.py
danny_toolkit/: __init__.py  cli.py  gui_launcher.py  launcher.py  main_omega.py  pep8_style_guide.txt.txt  rag_gui.py  test_cosmic_awareness.py  test_full_chain.py
danny_toolkit/agents/: __init__.py  base.py  orchestrator.py  phantom_agent.py  tool.py
danny_toolkit/ai/: __init__.py  advanced_questions.py  artificial_life.py  claude_chat.py  knowledge_companion.py  legendary_companion.py  mini_rag.py  ml_studio.py  nieuws_agent.py  nlp_studio.py  production_rag.py  vector_studio.py  weer_agent.py
danny_toolkit/apps/: __init__.py  agenda_planner.py  artificial_life.py  base_app.py  boodschappenlijst.py  citaten_generator.py  code_analyse.py  code_snippets.py  decision_maker.py  dream_journal.py  energie_vs_tech.py  expense_tracker.py  fitness_tracker.py  flashcards.py  goals_tracker.py  habit_tracker.py  knowledge_companion.py  language_tutor.py  legendary_companion.py  mood_tracker.py  music_composer.py  nlp_studio.py  notitie_app.py  pomodoro_timer.py  prism_dashboard.py  recipe_generator.py  rekenmachine.py  room_planner.py  schatzoek.py  tijd_info.py  time_capsule.py  unit_converter.py  vector_studio.py  virtueel_huisdier.py  wachtwoord_generator.py  watchtower.py
danny_toolkit/brain/: __init__.py  __main__.py  adversarial_tribunal.py  agent_factory.py  app_tools.py  arbitrator.py  artificer.py  black_box.py  brain_cli.py  central_brain.py  citation_marshall.py  claude_memory.py  config_auditor.py  cortex.py  cortical_stack.py  devops_daemon.py  dream_monitor.py  dreamer.py  eternal_sentinel.py  file_guard.py  ghost_amplifier.py  ghost_writer.py  governor.py  governor_firewall.py  governor_state.py  hallucination_shield.py  introspector.py  model_sync.py  morning_protocol.py  nexus_bridge.py  observatory_sync.py  omega_core.py  oracle.py  (+28 more)
data/: batch_refactor_results.md  benchmark_results.json  daemon_heartbeat.txt  file_manifest.json  guard_scan_results.json  knowledge_map.json  phase3_final_scan.json  refactor_telemetry.json  synapse_weights.json
docs/: gpu.md  index.md  rag.md
kennisbank/: api_design.txt  llm_prompting.txt  machine_learning.txt  neural_networks.txt  python_geavanceerd.txt  vector_databases.txt
tests/: README.md  conftest.py  test_key_manager.py  test_rag_pipeline.py  test_swarm_engine.py  test_swarm_stress.py
(+147 files in other folders)
