[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danny-toolkit"
version = "2.1.0+omega"
description = "Danny's persoonlijke Python toolkit met AI-agents en apps"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Danny", email = "danny.laurent1988@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["toolkit", "ai", "agents", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "voyageai>=0.2.0",
    "groq>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
full = [
    "psutil>=5.9.0",
    "elevenlabs>=0.2.0",
    "openai>=1.0.0",
]

[project.scripts]
danny-toolkit = "danny_toolkit.launcher:main"
morning-protocol = "danny_toolkit.brain.morning_protocol:run_morning_protocol"
brain = "danny_toolkit.brain.brain_cli:main"
omega = "danny_toolkit.main_omega:main"

[project.urls]
Homepage = "https://github.com/danny/danny-toolkit"

[tool.setuptools.packages.find]
where = ["."]
include = ["danny_toolkit*"]

[tool.setuptools.package-data]
danny_toolkit = ["*.json", "*.txt"]
