[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danny-toolkit"
version = "4.1.0"
description = "Danny's persoonlijke Python toolkit met AI-agents en apps"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Danny", email = "danny.laurent1988@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["toolkit", "ai", "agents", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "voyageai>=0.2.0",
    "beautifulsoup4>=4.11.0",
    "requests>=2.31.0",
    "trafilatura>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
full = [
    "psutil>=5.9.0",
    "elevenlabs>=0.2.0",
    "openai>=1.0.0",
]

[project.scripts]
danny = "danny_toolkit.cli:main"
danny-toolkit = "danny_toolkit.launcher:main"
danny-gui = "danny_toolkit.gui_launcher:main"
danny-rag = "danny_toolkit.rag_gui:main"
morning-protocol = "danny_toolkit.brain.morning_protocol:run_morning_protocol"
brain = "danny_toolkit.brain.brain_cli:main"
omega = "danny_toolkit.main_omega:main"
heartbeat = "danny_toolkit.daemon.heartbeat:main"
danny-api = "fastapi_server:main"
danny-bot = "telegram_bot:main"

[project.urls]
Homepage = "https://github.com/dannyanny1212/danny-toolkit"

[tool.setuptools.packages.find]
where = ["."]
include = ["danny_toolkit*"]

[tool.setuptools.package-data]
danny_toolkit = ["*.json", "*.txt"]
